--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -26,7 +26,8 @@ body {
   &__items {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: stretch;
+    flex-wrap: wrap;
   }
 
   &__top {
